# gstreamer

./: README.md
gstreamer-01/: .gitignore  CMakeLists.txt  main.cpp
gstreamer-02/: CMakeLists.txt  main.cpp
